k8/collector.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: collector
  labels:
    app: collector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: collector
  template:
    metadata:
      labels:
        app: collector
    spec:
      #volumes:
      #  - name: test-volume
      #    hostPath:
      #      # directory location on host
      #      path: /configurations/configuration
      #      type: Directory
      volumes :
        - name: otel-agent-config-vol
          configMap:
            name: otel-agent-conf
            items:
              - key: otel-agent-config
                path: otel-agent-config.yaml
      containers:
      - name: collector
        image: otel/opentelemetry-collector-contrib:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - mountPath: /data
            name: otel-agent-config-vol
        command:
           - '/otelcol-contrib'
           - '--config=/data/otel-agent-config.yaml'
        #command: [ "--config=/data/otel-agent-config.yaml" ]
        ports:
          - containerPort: 5555
            name: "otel-grpc"
          - containerPort : 6666
            name : "prometheus"
        
---

apiVersion: v1
kind: Service
metadata:
  name: collector-service
  namespace: default
spec:
  type: ClusterIP #NodePort #LoadBalancer
  selector:
    app: collector
  ports:
  - port: 5555
    targetPort: 5555
    name : "otel-grpc"
  - port: 6666
    targetPort: 6666
    name : "prometheus"
