k8/grafana.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      #volumes:
      #  - name: test-volume
      #    hostPath:
      #      # directory location on host
      #      path: /configurations/configuration
      #      type: Directory
      volumes :
        - name: grafana-config-vol
          configMap:
            name: grafana-config
            items:
              - key : grafana
                path: grafana.ini
              - key : datasources
                path: provisioning/datasources/datasources.yaml
      containers:
      - name: grafana
        image: grafana/grafana:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - mountPath: /data
            name: grafana-config-vol
        command:
          - '/run.sh'
        #command: [ "--config=/data/otel-agent-config.yaml" ]
        ports:
          - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: default
spec:
  type: ClusterIP #NodePort #LoadBalancer
  selector:
    app: grafana
  ports:
  - port: 3000
    targetPort: 3000
