k8/restaurant.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant
  labels:
    app: restaurant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restaurant
  template:
    metadata:
      labels:
        app: restaurant
    spec:
      containers:
      - name: restaurant
        image: hemant24/restaurant:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9081
        resources:
          requests:
            memory: "250Mi"
            cpu: "100m"
          limits:
            memory: "350Mi"
            cpu: "300m"


---


apiVersion: v1
kind: Service
metadata:
  name: restaurant-service
  namespace: default
spec:
  type: ClusterIP #NodePort #LoadBalancer
  selector:
    app: restaurant
  ports:
  - port: 8080
    targetPort: 9081
