k8/tempo.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tempo
  labels:
    app: tempo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tempo
  template:
    metadata:
      labels:
        app: tempo
    spec:
      #volumes:
      #  - name: test-volume
      #    hostPath:
      #      # directory location on host
      #      path: /configurations/configuration
      #      type: Directory
      volumes :
        - name: tempo-config-vol
          configMap:
            name: tempo-config
            items:
              - key: tempo-config
                path: tempo-config.yaml
              - key : tempo-overrides
                path : tempo-overrides.yaml
      containers:
      - name: tempo
        image: grafana/tempo:latest
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - mountPath: /data
            name: tempo-config-vol
        command: 
          - '-config.file=/data/tempo-config.yaml'
        #command: [ "--config=/data/otel-agent-config.yaml" ]
        ports:
          - containerPort: 3200
            name: "status-port"
          - containerPort : 4317
            name : "otlp-grpc"
        
---

apiVersion: v1
kind: Service
metadata:
  name: tempo-service
  namespace: default
spec:
  type: ClusterIP #NodePort #LoadBalancer
  selector:
    app: tempo
  ports:
  - port: 4317
    targetPort: 4317
    name : "otlp-grpc"
  - port : 3200
    targetPort: 3200
    name : "status-port"
