k8/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    #kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /rating/(.*)
        backend:
          service:
            name: rating-service
            port:
              number: 8080
      - pathType: Prefix
        path: /restaurant/(.*)
        backend:
          service:
            name: restaurant-service
            port:
              number: 8080
      - pathType: Prefix
        path: /order/(.*)
        backend:
          service:
            name: order-service
            port:
              number: 8080
